# langchain-experimental

./: README.md
.github/scripts/: check_diff.py  get_min_versions.py
.github/workflows/: _compile_integration_test.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  check_diffs.yml
libs/experimental/: Makefile  extended_testing_deps.txt  pyproject.toml
libs/experimental/examples/: semantic_chunker_batch_size_example.py
libs/experimental/langchain_experimental/: text_splitter.py
libs/experimental/langchain_experimental/agents/: __init__.py
libs/experimental/langchain_experimental/agents/agent_toolkits/: __init__.py
libs/experimental/langchain_experimental/agents/agent_toolkits/cloudwatch/: __init__.py  base.py  prompt.py
libs/experimental/langchain_experimental/agents/agent_toolkits/csv/: base.py
libs/experimental/langchain_experimental/agents/agent_toolkits/matplotlib/: README.md  __init__.py  base.py  prompt.py
libs/experimental/langchain_experimental/agents/agent_toolkits/numpy/: __init__.py  base.py  prompt.py
libs/experimental/langchain_experimental/agents/agent_toolkits/pandas/: base.py
libs/experimental/langchain_experimental/autonomous_agents/autogpt/: agent.py  prompt.py  prompt_generator.py
libs/experimental/langchain_experimental/cpal/: base.py
libs/experimental/langchain_experimental/data_anonymizer/: deanonymizer_matching_strategies.py
libs/experimental/langchain_experimental/generative_agents/: memory.py
libs/experimental/langchain_experimental/graph_transformers/: llm.py
libs/experimental/langchain_experimental/pal_chain/: base.py
libs/experimental/langchain_experimental/smart_llm/: base.py
libs/experimental/tests/integration_tests/: test_video_captioning.py
libs/experimental/tests/integration_tests.egg-info/: PKG-INFO  SOURCES.txt
libs/experimental/tests/integration_tests/chains/: test_cpal.py
libs/experimental/tests/unit_tests/: test_bash.py  test_llm_bash.py  test_sql.py  test_text_splitter.py
libs/experimental/tests/unit_tests/agents/agent_toolkits/matplotlib/: test_matplotlib_toolkit.py
libs/experimental/tests/unit_tests/agents/agent_toolkits/pandas/: test_base.py
libs/experimental/tests/unit_tests/chat_models/: test_llm_wrapper_mixtral.py
libs/experimental/tests/unit_tests/graph/: test_save_load_graph_document.py
