[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = []
license = {text = "MIT"}
requires-python = "<4.0,>=3.9"
dependencies = [
    "langchain-core<1.0.0,>=0.3.28",
    "langchain-community<1.0.0,>=0.3.0",
]
name = "langchain-experimental"
version = "0.3.5rc1"
description = "Building applications with LLMs through composability"
readme = "README.md"

[project.urls]
"Source Code" = "https://github.com/langchain-ai/langchain-experimental/tree/main/libs/experimental"
"Release Notes" = "https://github.com/langchain-ai/langchain-experimental/releases"
repository = "https://github.com/langchain-ai/langchain-experimental"

[dependency-groups]
lint = [
    "ruff<0.6,>=0.5",
]
typing = [
    "mypy<1.12,>=1.10",
    "types-pyyaml<7.0.0.0,>=6.0.12.2",
    "types-requests<3.0.0.0,>=2.28.11.5",
    "langchain @ git+https://github.com/langchain-ai/langchain.git#subdirectory=libs/langchain",
    "langchain-core @ git+https://github.com/langchain-ai/langchain.git#subdirectory=libs/core",
    "langchain-community @ git+https://github.com/langchain-ai/langchain.git#subdirectory=libs/community",
]
dev = [
    "jupyter<2.0.0,>=1.0.0",
    "setuptools<68.0.0,>=67.6.1",
    "langchain @ git+https://github.com/langchain-ai/langchain.git#subdirectory=libs/langchain",
    "langchain-core @ git+https://github.com/langchain-ai/langchain.git#subdirectory=libs/core",
    "langchain-community @ git+https://github.com/langchain-ai/langchain.git#subdirectory=libs/community",
]
test = [
    "pytest<8.0.0,>=7.3.0",
    "pytest-asyncio<1.0.0,>=0.20.3",
    "langchain @ git+https://github.com/langchain-ai/langchain.git#subdirectory=libs/langchain",
    "langchain-core @ git+https://github.com/langchain-ai/langchain.git#subdirectory=libs/core",
    "langchain-community @ git+https://github.com/langchain-ai/langchain.git#subdirectory=libs/community",
    "langchain-text-splitters @ git+https://github.com/langchain-ai/langchain.git#subdirectory=libs/text-splitters",
    "numpy<2.0.0,>=1.24.0; python_version < \"3.12\"",
    "numpy<2.0.0,>=1.26.0; python_version >= \"3.12\"",
]
test_integration = [
    "langchain @ git+https://github.com/langchain-ai/langchain.git#subdirectory=libs/langchain",
    "langchain-core @ git+https://github.com/langchain-ai/langchain.git#subdirectory=libs/core",
    "langchain-community @ git+https://github.com/langchain-ai/langchain.git#subdirectory=libs/community",
    "langchain-openai @ git+https://github.com/langchain-ai/langchain.git#subdirectory=libs/partners/openai",
]


[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["notebooks", "examples", "example_data"]

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "requires: mark tests as requiring a specific library",
    "asyncio: mark tests as requiring asyncio",
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"
